...

  const onChangeText = (e: NativeSyntheticEvent<TextInputFocusEventData>) => {
    debouncedFilterItems.current?.cancel();
    debouncedFilterItems.current?.(e.nativeEvent.text);
  };

  useSearchBar({ navigation, onChangeText, placeholder: "Find in Genres" });

  useEffect(() => {
    setFilteredItemsList(genres?.data?.Items);
  }, [genres?.data?.Items]);

  const opacity = useFadeIn([genres]);
...
