...

  const onChangeText = (e: NativeSyntheticEvent<TextInputFocusEventData>) => {
    debouncedFilterItems.current?.cancel();
    debouncedFilterItems.current?.(e.nativeEvent.text);
  };

  useSearchBar({ navigation, onChangeText, placeholder: "Find in Albums" });

  useEffect(() => {
    setFilteredItemsList(albums.data?.Items);
  }, [albums.data?.Items]);

  const opacity = useFadeIn([albums]);
...
