...
        showsVerticalScrollIndicator={false}
      >
        {/*
          Look into suggestions API.
          <AlbumCarousel request={suggestedAlbums} title="Top Picks" />
        */}
        <AlbumCarousel request={recentlyPlayedAlbums} title="Recently Played" />

        {/*
          This messes up because there are multiple favouritable items.
          Split up albums/artists here. Add favourite songs as a "smart playlist" like AM
          <AlbumCarousel request={favouriteAlbums} title="Favourites" />
        */}
        <AlbumCarousel
          request={frequentlyPlayedAlbums}
          title="Frequently Played"
        />
        <View style={{ height: headerHeight + 200 }} />
      </Animated.ScrollView>
    </SafeAreaView>
  );
};
...
