...
                  editable={!discoverJellyfinServers.isPending}
                  keyboardType="url"
                  onChangeText={onChange}
                  placeholder="https://jellyfin.yourserver.com/"
                  placeholderTextColor="grey"
                  style={styles.input}
                  testID="server-input"
                  value={value}
                />
              </View>
            </View>
          );
        }}
...

      <View style={styles.buttonContainer}>
        <Button
          isDisabled={discoverJellyfinServers.isPending}
          isLoading={discoverJellyfinServers.isPending}
          onPress={handleSubmit(handleOnPressNext, handleError)}
          testID="check-connection-button"
          title="Check connection..."
        />
      </View>
      <View style={styles.buttonContainer}>
        <Button
          disabled={discoverJellyfinServers.isPending}
...
