...
            value={usernameInput}
            keyboardType="default"
            autoCapitalize="none"
            autoComplete="username"
            autoCorrect={false}
            editable={!isAuthenticatingUser}
            testID="username-input"
          />
        </View>
        {!isDemoServer && (
          <View style={styles.inputContainer}>
            <TextInput
              style={styles.input}
...
      <View style={styles.buttonContainer}>
        <Button
          onPress={handleLogin}
          title="Login"
          isLoading={isAuthenticatingUser}
          disabled={isButtonDisabled()}
          testID="login-button"
        />
      </View>
    </SafeAreaView>
  );
};

...
