appId: dev.easton.jello
---
- launchApp:
    appId: "dev.easton.jello"
    clearState: true
    clearKeychain: true
- tapOn:
    id: "continue-button"
- tapOn:
    id: "server-input"
- inputText: "https://demo.jellyfin.org/stable"
- tapOn:
    id: "check-connection-button"
- tapOn:
    id: "username-input"
- inputText: "demo"
- tapOn:
    id: "login-button"
- assertVisible: "Listen Now"
- assertVisible: "Recently Played"
- assertVisible: "Frequently Played"
